--- a/src/css/programma.css
+++ b/src/css/programma.css
@@ -10,7 +10,7 @@
   @media (--sm) {
     height: 30rem;
     background-image: url(./../assets/img/bg/4_100.png);
-    background-image: -webkit-image-set(url(./../assets/img/bg/4_100.webp));
+    /* background-image: url(./../assets/img/bg/4_100.webp); */
     background-repeat: no-repeat;
   }
 
@@ -18,7 +18,7 @@
     height: 30rem;
     background-size: 104%;
     background-image: url(./../assets/img/bg/3_100.png);
-    background-image: -webkit-image-set(url(./../assets/img/bg/3_100.webp));
+    /* background-image: url(./../assets/img/bg/3_100.webp); */
     background-position: -2rem 2rem;
     background-repeat: no-repeat;
   }
@@ -28,7 +28,7 @@
     top: 0;
     background-size: 104%;
     background-image: url(./../assets/img/bg/2_100.png);
-    background-image: -webkit-image-set(url(./../assets/img/bg/2_100.webp));
+    /* background-image: url(./../assets/img/bg/2_100.webp); */
     background-position: -4rem -1rem;
     background-repeat: no-repeat;
   }
@@ -37,7 +37,7 @@
     height: 160rem;
     background-size: 104%;
     background-image: url(./../assets/img/bg/1_100.png);
-    background-image: -webkit-image-set(url(./../assets/img/bg/1_100.webp));
+    /* background-image: url(./../assets/img/bg/1_100.webp); */
     background-position: -5rem -3rem;
     background-repeat: no-repeat;
   }
