--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,7 +1,7 @@
 /*-------HEADER--------*/
 
 .home__header {
-  overflow: hidden;
+  /* overflow: hidden; */
   width: 100%;
   background-repeat: no-repeat;
   background-size: 100%;
@@ -9,11 +9,8 @@
   justify-content: center;
   height: 150vw;
   align-items: flex-end;
-  background-image: url(./../assets/img/header/header4_100.png);
-  background-image:
-    -webkit-image-set(
-      url(./../assets/img/header/header4_100.webp)
-    );
+  background-image: url('./../assets/img/header/header4_100.png');
+  /* background-image: url('./../assets/img/header/header4_100.webp'); */
   background-position-y: 0;
 
   @media (--md) {
@@ -22,11 +19,8 @@
     align-items: flex-end;
     background-repeat: no-repeat;
     background-size: 104%;
-    background-image: url(./../assets/img/header/header3_100.png);
-    background-image:
-      -webkit-image-set(
-        url(./../assets/img/header/header3_100.webp)
-      );
+    background-image: url('./../assets/img/header/header3_100.png');
+    /* background-image: url(./../assets/img/header/header3_100.webp); */
     background-position: -2rem 0;
     padding-bottom: 6rem;
     background-repeat: no-repeat;
@@ -38,10 +32,7 @@
     background-size: 108%;
     background-repeat: no-repeat;
     background-image: url(./../assets/img/header/header2_100.png);
-    background-image:
-      -webkit-image-set(
-        url(./../assets/img/header/header2_100.webp)
-      );
+    /* background-image: url(./../assets/img/header/header2_100.webp); */
     background-position: -4rem -11rem;
   }
 
@@ -50,10 +41,7 @@
     background-size: 103%;
     background-repeat: no-repeat;
     background-image: url(./../assets/img/header/header1_100.png);
-    background-image:
-      -webkit-image-set(
-        url(./../assets/img/header/header1_100.webp)
-      );
+    /* background-image: url(./../assets/img/header/header1_100.webp); */
     background-position: -3rem -9rem;
   }
 }
@@ -603,7 +591,8 @@
   height: 233vw;
   align-items: flex-end;
   background-color: var(--background-color);
-  background-image: url(./../assets/img/bg/nieuwsbrief4_100.webp);
+  background-image: url(./../assets/img/bg/nieuwsbrief4_100.png);
+  /* background-image: url(./../assets/img/bg/nieuwsbrief4_100.webp); */
   background-position: -4rem 0;
   position: absolute;
   z-index: -1;
@@ -612,21 +601,24 @@
     height: 60rem;
     align-items: flex-end;
     background-size: 104%;
-    background-image: url(./../assets/img/bg/nieuwsbrief3_100.webp);
+    background-image: url(./../assets/img/bg/nieuwsbrief3_100.png);
+    /* background-image: url(./../assets/img/bg/nieuwsbrief3_100.webp); */
     background-position: -2rem 92px;
   }
 
   @media (--lg) {
     height: 80rem;
     background-size: 104%;
-    background-image: url(./../assets/img/bg/nieuwsbrief2_100.webp);
+    background-image: url(./../assets/img/bg/nieuwsbrief2_100.png);
+    /* background-image: url(./../assets/img/bg/nieuwsbrief2_100.webp); */
     background-position: --4rem 22rem;
   }
 
   @media (--xl) {
     height: 65vw;
     background-size: 103%;
-    background-image: url(./../assets/img/bg/nieuwsbrief1_100.webp);
+    background-image: url(./../assets/img/bg/nieuwsbrief1_100.png);
+    /* background-image: url(./../assets/img/bg/nieuwsbrief1_100.webp); */
     background-position: -3rem 25rem;
   }
 }
