--- a/src/css/site-header.css
+++ b/src/css/site-header.css
@@ -38,6 +38,10 @@
 
   @media (--xl) {
     height: 10rem;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 5;
   }
 }
 
