--- a/src/css/programma.css
+++ b/src/css/programma.css
@@ -161,7 +161,7 @@
   grid-row: 1;
   width: 30rem;
   height: 5rem;
-  outline: none;
+  /* outline: none; */
   border-color: var(--primary-color);
   background-color: var(--color-light);
   cursor: pointer;
@@ -185,7 +185,7 @@
   margin-bottom: 1rem;
   width: 30rem;
   height: 5rem;
-  outline: none;
+  /* outline: none; */
   cursor: pointer;
 
   @media (--md) {
