--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ body {
 .container {
   margin: 0 auto;
   width: 100%;
-  max-width: 32rem; /* px gedeeld door 10 */
+  max-width: 32rem;
   padding-left: 1rem;
   padding-right: 1rem;
 
